Resolves: tdf#124980 drop dangling timer

Change-Id: I05ec394ee83f0422ecccf3ae3377818af6feb1d1
Reviewed-on: https://gerrit.libreoffice.org/71398
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>